syntax = "proto3";
import "google/protobuf/empty.proto";
import "types.proto";
package manulab;



service ResourceProvider {
  rpc GetPluginInfo(google.protobuf.Empty) returns (PluginInfo);
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);
  
  // TODO: Implement
  rpc Configure(google.protobuf.Empty) returns (google.protobuf.Empty);
  // TODO: Implement
  rpc Check(google.protobuf.Empty) returns (google.protobuf.Empty);
  // TODO: Implement
  rpc Diff(google.protobuf.Empty) returns (google.protobuf.Empty);
  // TODO: Implement
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // TODO: Implement
  rpc Read(google.protobuf.Empty) returns (google.protobuf.Empty);
  // TODO: Implement
  rpc Update(google.protobuf.Empty) returns (google.protobuf.Empty);
  // TODO: Implement
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message PluginInfo {
  string version = 1;
}

message GetSchemaRequest {
  Category category = 1;
  Format format = 2;
  map<string, string> selector = 3;
}

message GetSchemaResponse {
  repeated string schema = 1;
  repeated Resource completeSchema = 2;
}
